# airline-reliability

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.chroma_airline_delay/: indexed_csv_mtime.txt
.chroma_airline_delay/7b746086-7e95-4bcb-ba51-dd7989310461/: index_metadata.pickle
.chroma_airline_reliability/: indexed_csv_mtime.txt
.chroma_airline_reliability/eb9e0f6f-7ca1-4037-b351-cb8a27d498b2/: index_metadata.pickle
docs/: c4-components-mcp.puml  c4-containers.puml
src/airline_reliability/: Airline_Delay_Cause.csv  __init__.py  app.py  csv_path.py  graph.py  mcp_server.py  rag_index.py
