[project]
name = "airline-reliability"
version = "0.1.0"
description = "MCP RAG server for airline delay CSV, LangGraph agent, and Gradio chat (OpenAI gpt-4o-mini)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "gradio>=5.0.0",
    "langchain-core>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
airline-reliability-mcp = "airline_reliability.mcp_server:main"
airline-reliability-chat = "airline_reliability.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airline_reliability"]
